# megaengine

./: .gitignore  Cargo.toml  README.md
.github/workflow/: claude-review.yml
.github/workflows/: claude-review.yml
cert/: ca-cert-key.pem  ca-cert.pem  cert.pem  key.pem
src/: lib.rs  main.rs
src/bundle/: mod.rs  service.rs  transfer.rs
src/chat/: service.rs
src/cli/: chat.rs  mod.rs  node.rs  repo.rs
src/git/: git_repo.rs  mod.rs  pack.rs
src/gossip/: message.rs  service.rs
src/identity/: keypair.rs
src/mcp/: mcp_server.rs  mod.rs  sse_server.rs
src/node/: mod.rs  node_addr.rs  node_manager.rs
src/repo/: repo.rs  repo_id.rs  repo_manager.rs
src/storage/: chat_message.rs  mod.rs  node_model.rs  ref_model.rs  repo_model.rs
src/transport/: cert.rs  config.rs  quic.rs
tests/: bundle_two_nodes.rs  git_pack.rs  gossip_three_nodes.rs
